[gd_scene load_steps=15 format=2]

[ext_resource path="res://Fonts/PressStart2P.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/StartScreen.gd" type="Script" id=2]
[ext_resource path="res://Assets/Terrain/1 - Foreground_scenery.png" type="Texture" id=3]
[ext_resource path="res://Assets/Terrain/4 - Cloud_cover_2.png" type="Texture" id=4]
[ext_resource path="res://Assets/Terrain/5 - Sky_color.png" type="Texture" id=5]
[ext_resource path="res://Assets/Terrain/2 - Hills.png" type="Texture" id=6]
[ext_resource path="res://baseTileMap.tres" type="TileSet" id=7]

[sub_resource type="Theme" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="StartScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="bg" type="Node2D" parent="."]

[node name="sky" type="Sprite" parent="bg"]
position = Vector2( 160, 89 )
texture = ExtResource( 5 )

[node name="cloud" type="Sprite" parent="bg"]
position = Vector2( 160, 89 )
texture = ExtResource( 4 )

[node name="hill" type="Sprite" parent="bg"]
position = Vector2( 160, 88 )
texture = ExtResource( 6 )

[node name="trees" type="Sprite" parent="bg"]
position = Vector2( 160, 89 )
texture = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.333333 )

[node name="controls" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -72.0
margin_top = -31.0
margin_right = 72.0
margin_bottom = 31.0

[node name="startBtn" type="Button" parent="controls"]
margin_right = 144.0
margin_bottom = 16.0
focus_neighbour_top = NodePath("../quitBtn")
theme = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.796078, 0.756863, 0.12549, 1 )
custom_colors/font_color_pressed = Color( 0.835294, 0.494118, 0.0941176, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
text = "Start"

[node name="controlsBtn" type="Button" parent="controls"]
margin_top = 20.0
margin_right = 144.0
margin_bottom = 36.0
theme = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.796078, 0.756863, 0.12549, 1 )
custom_colors/font_color_pressed = Color( 0.835294, 0.494118, 0.0941176, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
text = "Controls"

[node name="quitBtn" type="Button" parent="controls"]
margin_top = 40.0
margin_right = 144.0
margin_bottom = 56.0
focus_neighbour_bottom = NodePath("../startBtn")
theme = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.796078, 0.756863, 0.12549, 1 )
custom_colors/font_color_pressed = Color( 0.835294, 0.494118, 0.0941176, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
text = "Quit"

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 7 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 17, 0, 1, 16, 0, 2, 16, 0, 3, 16, 0, 4, 16, 0, 5, 16, 0, 6, 16, 0, 7, 16, 0, 8, 16, 0, 9, 16, 0, 10, 16, 0, 11, 16, 0, 12, 16, 0, 13, 16, 0, 14, 16, 0, 15, 16, 0, 16, 16, 0, 17, 16, 0, 18, 16, 0, 19, 15, 0, 65536, 14, 0, 65555, 12, 0, 131072, 14, 0, 131091, 12, 0, 196608, 14, 0, 196627, 12, 0, 262144, 14, 0, 262163, 12, 0, 327680, 14, 0, 327699, 12, 0, 393216, 14, 0, 393235, 12, 0, 458752, 14, 0, 458771, 12, 0, 524288, 14, 0, 524307, 12, 0, 589824, 14, 0, 589843, 12, 0, 655360, 14, 0, 655379, 12, 0, 720896, 11, 0, 720897, 10, 0, 720898, 10, 0, 720899, 10, 0, 720900, 10, 0, 720901, 10, 0, 720902, 10, 0, 720903, 10, 0, 720904, 10, 0, 720905, 10, 0, 720906, 10, 0, 720907, 10, 0, 720908, 10, 0, 720909, 10, 0, 720910, 10, 0, 720911, 10, 0, 720912, 10, 0, 720913, 10, 0, 720914, 10, 0, 720915, 9, 0 )

[connection signal="pressed" from="controls/startBtn" to="." method="_on_startBtn_pressed"]
[connection signal="pressed" from="controls/controlsBtn" to="." method="_on_controlsBtn_pressed"]
[connection signal="pressed" from="controls/quitBtn" to="." method="_on_quitBtn_pressed"]
